<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#372C2C"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_activity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/sale" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CHECK THE SALE"
            android:textColor="@color/bordo"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/banner" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/banner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="cost of product"
                android:src="@drawable/ic_outline_shopping_cart" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPriceProductLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/cost_of_product"
                android:inputType="numberDecimal"
                android:textColor="@color/bordo"
                android:textColorHint="@color/bordo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPriceProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="how many is the sale"
                android:src="@drawable/ic_outline_point_of_sale" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/how_many_is_the_sale"
                android:textColor="@color/bordo" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/groupSale"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_ten_percent">

            <RadioButton
                android:id="@+id/radio_ten_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ten_percent"
                android:textColor="@color/bordo" />

            <RadioButton
                android:id="@+id/radio_thrteen_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thrteen_percent"
                android:textColor="@color/bordo" />

            <RadioButton
                android:id="@+id/radio_seventeen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seventeen_percent"
                android:textColor="@color/bordo" />

            <RadioButton
                android:id="@+id/radioPersonalite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textColor="@color/bordo" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:id="@+id/layoutPersonalizate"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgPersonalizate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_outline_calculate" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editPersonaliteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/how_many_is_the_sale"
                android:inputType="numberDecimal"

                android:textColor="@color/bordo"
                android:textColorHint="@color/bordo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPersonalite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/check_the_price_after_the_sale" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/banner" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/banner" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>